--- a/content/lessons/2020-03-09_science.md
+++ b/content/lessons/2020-03-09_science.md
@@ -1,8 +1,7 @@
 ---
-title: Science
+title: Science experience and attitudes
 date: 2020-03-08T23:41:14.705Z
 thumbnail: /img/hans-reniers-lqgjcmy5qcm-unsplash.jpg
+text: Now, we’d like to ask you some questions about your science experience and attitudes. Note, this part takes about 30-40 minutes to complete.
+link: https://docs.google.com/document/d/1PVLYTgCAR80jK3DJSes39GtcwO_O3gNIVBrPm6vS-wM/edit
 ---
-# Science
-
-Modern science is typically divided into three major branches that consist of the natural sciences (e.g., biology, chemistry, and physics), which study nature in the broadest sense; the social sciences (e.g., economics, psychology, and sociology), which study individuals and societies; and the formal sciences (e.g., logic, mathematics, and theoretical computer science), which study abstract concepts. There is disagreement, however, on whether the formal sciences actually constitute a science as they do not rely on empirical evidence. Disciplines that use existing scientific knowledge for practical purposes, such as engineering and medicine, are described as applied sciences.
