--- a/content/lessons/2020-03-09_science.md
+++ b/content/lessons/2020-03-09_science.md
@@ -2,6 +2,6 @@
 title: Science experience and attitudes
 date: 2020-03-08T23:41:14.705Z
 thumbnail: /img/hans-reniers-lqgjcmy5qcm-unsplash.jpg
-text: Now, we’d like to ask you some questions about your science experience and attitudes. Note, this part takes about 30-40 minutes to complete.
+text:
 link: https://nyu.qualtrics.com/jfe/form/SV_0pjYFhmM01A4s1T
 ---
