--- a/content/lessons/2020-03-09_science.md
+++ b/content/lessons/2020-03-09_science.md
@@ -2,6 +2,6 @@
 title: Science experience and attitudes
 date: 2020-03-08T23:41:14.705Z
 thumbnail: /img/hans-reniers-lqgjcmy5qcm-unsplash.jpg
-text:
+text: now this part takes 6-7 minutes to complete
 link: https://nyu.qualtrics.com/jfe/form/SV_0pjYFhmM01A4s1T
 ---
